Make name consistent with story

--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,12 +1,12 @@
 <div id="map-container">
   <h2 class="hed">An urban/suburban divide</h2>
-  <p class="chatter">Dave Hutch drew most of his support from the urban core of Minneapolis, wheras most of the precincts Rich Stanek won were in the less densely populated suburbs. This map shows who won each precinct, shaded by the number of votes cast per square mile.</p>
+  <p class="chatter">Dave Hutchinson drew most of his support from the urban core of Minneapolis, whereas most of the precincts Rich Stanek won were in the less densely populated suburbs. This map shows who won each precinct, shaded by the number of votes cast per square mile.</p>
 
   <div id="map">
     <div id="map-legend">
       <div class="legend-row">
         <div class="bar hutch"></div>
-        <div class="label">Won by Hutch</div>
+        <div class="label">Won by Hutchinson</div>
       </div>
 
       <div class="legend-row">
